

CJAX 5.9
Improvements to the core system
Improved overall scalability and heavy duty usage
Improved caching system and integrated smart caching, fully integrated with $ajax->call()
Improved Examples



CJAX 5.7, 5.8
Small improvements and fixes.  This release seems to be the most estable yet, and no major issues have been reported.

CJAX 5.6

September 19, 2013

* Fixed issue displaying a blank page some times (Thanks Stefan for reporting this)
* Fixed click trigger event
* Improved some Js access functions processing
* Added new Main property in samples
* Added Js Properties in samples
* Added Location in samples
* Added click() on samples
* Fixed form loading text option not display when submitting a form (thanks Jim for reporting this)
* Plugin uploader now included in main release package
* Plugin uploadify now included in main release package
* Plugin validate now included in main release package
* Plugin autocomplete now included in main release package
* Plugin ExamplePlugin now included in main release package


CJAX 5.5

April 10, 2013


Support for PHP5.4x
Fixed plugins docs issues with an old function reference interupting the page from displaying.

 
CJAX 5.4
Frebruary 23, 2013

Support for keypress event
Ability for url element values to process Js modifiers and functions.
Fixed minor problems with plugin data processor
Enhanced some range statements
Removed autoloading function
Added extra php settings check to check for error display
Added Strict Standard Check and tries to automatically turn it off if it is on.
Added PHP version check, so it shows a message if your php versions is not compatible.
Fixed some notices
Enhanced the uploader and made more efficient and reliable. Re-did the ajax uploader documentation
Other fixes and improvements
	
	
CJAX 5.3-Obama2012
Nov 2nd, 2012
Maintenance Release

* New Autocomplete plugin
* Ability for wait() function to process milliseconds
* Implemented new release "code name" policy